--- a/styles/main.css
+++ b/styles/main.css
@@ -14,13 +14,13 @@ h1 {
 }
 
 #sync-status {
-    display: flex;
-    justify-content: center;
+    font-size: 16px;
+    font-weight: bold;
 }
 
 #sync-icon {
-    font-size: 30px;
-    text-align: center;
+    font-size: 20px;
+    margin-left: 5px;
 }
 
 #task-list div {
